--- a/yield/src/app/app.component.html
+++ b/yield/src/app/app.component.html
@@ -5,12 +5,16 @@
   <app-top-bar class="z-50"></app-top-bar>
 
   <!-- Action bar for performing actions, e.g. upload file, submit trades i.e save, clearing table, fetching historical -->
-  <caption class="block text-2xl pt-8">Upload a trade file in .csv format to view report options</caption>
+  <caption class="block text-2xl pt-8">Upload a trade file in .csv format to view options</caption>
   <div class="action-container">
-    <form class="action-input-group-center">
-      <input class="action-input" type="file">
-      <button class="action-input-btn">Upload</button>
-    </form>
+    
+    <app-file-upload 
+      [(hasUploadFile)]="showSelectTable"
+      class="flex flex-col flex-1 items-center justify-center">
+
+      <p typeError class="file-type-error text-red-600">Incorrect file type, must be .csv type</p>
+    </app-file-upload>
+  
 
     <!-- HIDE BUTTON GROUP; ONLY SHOW AFTER FILE HAS BEEN UPLOADED -->
     <ng-container *ngIf="true">
@@ -39,17 +43,16 @@
     [showLineChart]="showLineChart"
     [showBarChart]="showBarChart" class=""></app-analytic>
 
-
   <!-- Section for selecting column headers -->
   <app-data-select-table
-    [showSelectDataTable]="showSelectDataTable"
-    class="">
-  </app-data-select-table>
+    *ngIf="showSelectTable && !showTable"
+    [(showTable)]="showTable"
+    [(showTable)]="!showSelectTable" ></app-data-select-table>
 
     
   <!-- Section for uploading / show after file is uploaded -->
   <app-data-table 
-    [showDataTable]="showDataTable"
+    *ngIf="showTable && showSelectTable"
     class=""></app-data-table>
 
   <footer class="app-footer">
