--- a/yield/src/app/data-select-table/data-select-table.component.css
+++ b/yield/src/app/data-select-table/data-select-table.component.css
@@ -1,36 +1,58 @@
-.table-trade {
-  @apply mx-auto text-left text-sm text-gray-800 overflow-hidden;
+table {
+  @apply relative mx-auto border;
 }
 
-.table-trade-footer {
-  @apply w-full py-2 px-6 text-sm text-gray-800 hover:opacity-60;
+thead {
+  @apply py-2 px-3 text-white capitalize tracking-wide bg-[#9DACC6] rounded-sm;
 }
 
-.table-trade-footer-btn {
-  @apply py-2 px-8 text-white text-xl uppercase bg-[#DEB465] rounded-sm items-end justify-end mr-auto;
+caption {
+  @apply text-2xl text-gray-400 py-4;
 }
 
-.table-footer-text {
-  @apply text-sm font-normal text-[#9DACC6];
+tr {
+  @apply bg-[#FBF9F9];
 }
 
-.table-trade-header {
-  @apply text-xs text-white capitalize tracking-wide bg-[#9DACC6];
+th {
+  @apply bg-[#9DACC6];
 }
 
-.table-trade-select-label {
+td {
+  @apply border-b;
+}
+
+th, td {
+  @apply px-3 py-2 text-right font-semibold;
+}
+
+label {
   @apply block mb-2 text-xs text-white;
 }
 
-.table-trade-select {
+select {
   @apply bg-gray-50 border border-gray-300 text-gray-900 text-xs rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1;
 }
 
-.table-trade-cell-data {
-  @apply px-7 py-1 text-right font-semibold text-sm whitespace-nowrap;
+
+tfoot > tr > td {
+  @apply absolute bottom-[-pt-6] p-0 m-0 right-0;
 }
 
-.col-padding {
-  @apply px-6 py-3;
+tfoot > tr > td > button {
+  @apply py-2 px-8 m-0 text-white text-xl uppercase bg-[#DEB465] rounded-sm;
 }
+
+td[colspan] {
+  @apply relative;
+}
+
+.option-error {
+  @apply m-0 p-0 text-[0.7rem] italic text-red-500 font-normal;
+}
+
+.footer-error {
+  @apply pr-6 text-xs italic text-red-500 font-normal;
+}
+
 
