--- a/yield/src/app/data-table/data-table.component.css
+++ b/yield/src/app/data-table/data-table.component.css
@@ -1,26 +1,62 @@
-.table-trade {
-  @apply w-[98%] mx-auto text-left text-sm text-gray-800 overflow-hidden;
+table {
+  @apply relative mx-auto border;
 }
 
-.table-trade-footer {
-  @apply flex w-[98%] py-2 mx-auto justify-between text-sm text-gray-800;
+thead {
+  @apply py-2 px-3 text-white capitalize tracking-wide bg-[#9DACC6] rounded-sm;
 }
 
-.table-footer-text {
-  @apply text-sm font-normal text-[#9DACC6];
+caption {
+  @apply text-2xl text-gray-400 py-4;
 }
 
-.table-trade-header {
-  @apply text-xs text-white uppercase tracking-wider bg-[#9DACC6];
+tr {
+  @apply bg-[#FBF9F9];
 }
 
-.table-trade-select-label {
-  @apply block mb-2 text-xs text-gray-900 dark:text-white;
+th {
+  @apply bg-[#9DACC6];
 }
 
-.table-trade-select {
+td {
+  @apply border-b;
+}
+
+th, td {
+  @apply px-3 py-2 text-right font-semibold;
+}
+
+label {
+  @apply block mb-2 text-xs text-white;
+}
+
+select {
   @apply bg-gray-50 border border-gray-300 text-gray-900 text-xs rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-1;
 }
+
+
+tfoot > tr > td {
+  @apply absolute bottom-[-pt-6] p-0 m-0 right-0;
+}
+
+tfoot > tr > td > button {
+  @apply py-2 px-8 m-0 text-white text-xl uppercase bg-[#DEB465] rounded-sm;
+}
+
+td[colspan] {
+  @apply relative;
+}
+
+.option-error {
+  @apply m-0 p-0 text-[0.7rem] italic text-red-500 font-normal;
+}
+
+.footer-error {
+  @apply pr-6 text-xs italic text-red-500 font-normal;
+}
+
+
+
 
 .table-trade-checkbox {
   @apply w-4 h-4 text-blue-600 bg-[#9DACC6] border-gray-300 rounded focus:ring-blue-500 focus:ring-2;
