--- a/yield/src/app/file-upload/file-upload.component.html
+++ b/yield/src/app/file-upload/file-upload.component.html
@@ -1,5 +1,5 @@
 <ng-content *ngIf="hasFileTypeError" select="[typeError]"></ng-content>
-<form (change)="onFileSelect($event)" class="action-input-group-center">
+<form (change)="onFileUpload($event)" class="action-input-group-center">
   <input class="action-input" type="file" accept=".csv">
   <button class="action-input-btn">Upload</button>
 </form>
