--- a/yield/src/app/data-select-table/data-select-table.component.css
+++ b/yield/src/app/data-select-table/data-select-table.component.css
@@ -51,7 +51,7 @@ td[colspan] {
   @apply m-0 p-0 text-[0.7rem] italic text-red-500 font-normal;
 }
 
-.footer-error {
+.submit-error {
   @apply pr-6 text-xs italic text-red-500 font-normal;
 }
 
