--- a/yield/src/app/data-table/data-table.component.html
+++ b/yield/src/app/data-table/data-table.component.html
@@ -1,6 +1,6 @@
 <ng-container>
   <!-- Section for table displaying trades -->
-  <table>
+  <table *ngIf="tradeRecords.length > 0 || tempRecords.length > 0">
     <caption >Trade results </caption>
     <thead >
       <tr>
@@ -43,7 +43,7 @@
           <td> {{ 0.00 }} </td>
           <td>
             <a href="#" type="button" 
-              (click)="toggleEditModal(idx)" 
+              (click)="editTrade(idx, record)" 
               class="table-trade-edit-btn">Edit</a>
           </td>
         </tr>
@@ -53,7 +53,7 @@
       <tr>
         <td colspan="11">
           <span id=i class="column-error" >
-            Column identifiers must be selected before submitting!
+            <!-- Column identifiers must be selected before submitting! -->
           </span>
           <button type="button">Submit</button>
         </td>
@@ -62,55 +62,57 @@
   </table>
 </ng-container>
 
-<!-- Section for table displaying trades -->
-  <!-- <table class="table-trade">
-    <thead class="table-trade-header">
-      <tr>
-        <th scope="col" class="p-4">
-          <div class="flex items-center">
-            <input id="checkbox-all" type="checkbox" class="table-trade-checkbox">
-          </div>
-        </th>
-
-        <th *ngFor="let i of tableColumnsPerRow.slice(0, 10);" scope="col" class="px-6 py-3">
-          <label for="tradeColumnOption" class="table-trade-select-label">Column {{i}} identfier</label>
-          <select id="tradeColumnOption"  class="table-trade-select">
-
-            <option selected value=''>Choose an option</option>
-            <ng-container *ngFor="let opt of tradeColumnHeader; index as i;"> 
-              <option value={{i}}>{{ opt }}</option>
-            </ng-container>
-          </select>
-        </th>
-
-        <th scope="col" class="px-6 py-3">
-          Profit / Loss
-        </th>
-        <th scope="col" class="px-6 py-3">
-          Action
-        </th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr class="bg-[#F9FBFB] border-b-2 hover:bg-[#DEB465]">
-        <td class="w-4 p-4">
-          <div class="flex items-center">
-            <input id="checkbox-table-1" type="checkbox" class="table-trade-checkbox">
-          </div>
-        </td>
-        <td *ngFor="let val of tradeColumnValues; index as i;" class="table-trade-cell-data">
-          {{val}}
-        </td>
-        <td class="px-6 py-1">
-          <a href="#" type="button" (click)="toggleEditModal(0)" class="table-trade-edit-btn">Edit</a>
-        </td>
-      </tr>
-     
-    </tbody>
-  </table>
+<app-edit-modal 
+  [(tradeRecord)]="tradeRecord" 
+  [(showModal)]="showModal"
+  *ngIf="showModal"></app-edit-modal>
 
 
-  <nav class="table-trade-footer" >
+<!-- 
+<aside *ngIf="showModal" class="modal-wrapper">
+  <div class="modal-wrap-content">
+
+    <div class="modal-content">
+
+      <div class="modal-wrap-title">
+        <h3 class="text-3xl font-semibold">
+          Edit Trade
+        </h3>
+      </div>
+
+      <div class="py-6">
+        <div class="modal-input-wrap">
+          <app-input label="date" >{{tradeRecord.date}}</app-input>
+          <app-input label="side">{{tradeRecord.side}}</app-input>
+        </div>
+        <div class="modal-input-wrap">
+          <app-input label="unit_price">{{tradeRecord.unitPrice}}</app-input>
+          <app-input label="qty">{{tradeRecord.qty}}</app-input>
+        </div>
+        <div class="modal-input-wrap">
+          <app-input label="amount_paid">{{tradeRecord.amountPaid}}</app-input>
+          <app-input label="fee">{{tradeRecord.fee}}</app-input>
+        </div>
+        <div class="modal-input-wrap last">
+          <app-input label="currency_pair">{{tradeRecord.currencyPair}}</app-input>
+        </div>
+      </div>
+
+      <div class="modal-wrap-btn">
+        <button class="btn-close" type="button" (click)="cancelEdit()">
+          Cancel
+        </button>
+        <button class="btn-save" type="button" (click)="updateTradeRecord()">
+          Update
+        </button>
+      </div>
+
+    </div>
+  </div>
+</aside> -->
+
+<!-- FOR PAGINATION -->
+  <!-- <nav class="table-trade-footer" >
     <span class="table-footer-text">Showing 1-3 of 100</span>
     <ul class="inline-flex items-center -space-x-px">
       <li>
@@ -157,56 +159,4 @@
         </a>
       </li>
     </ul>
-  </nav>
-
-
-<div *ngIf="showModal"
-     class="overflow-x-hidden overflow-y-auto fixed inset-0 z-50 outline-none focus:outline-none justify-center items-center flex">
-  <div class="relative w-auto my-6 mx-auto max-w-3xl">
-
-
-    <div class="border-0 rounded-lg shadow-lg relative flex flex-col w-full bg-white outline-none focus:outline-none">
-
-      <div class="flex items-start justify-between p-5 border-b border-solid border-slate-200 rounded-t">
-        <h3 class="text-3xl font-semibold">
-          Modal Title
-        </h3>
-        <button class="p-1 ml-auto bg-transparent border-0 text-black opacity-5 float-right text-3xl leading-none font-semibold outline-none focus:outline-none"
-                (click)="toggleEditModal(0)">
-          <span class="bg-transparent text-black opacity-5 h-6 w-6 text-2xl block outline-none focus:outline-none">
-            ×
-          </span>
-        </button>
-      </div>
-
-
-      <div class="relative p-6 flex-auto">
-        <p class="my-4 text-slate-500 text-lg leading-relaxed">
-          I always felt like I could do anything. That’s the main
-          thing people are controlled by! Thoughts- their perception
-          of themselves! They're slowed down by their perception of
-          themselves. If you're taught you can’t do anything, you
-          won’t do anything. I was taught I could do everything.
-        </p>
-      </div>
-
-
-      <div class="flex items-center justify-end p-6 border-t border-solid border-slate-200 rounded-b">
-        <button class="text-red-500 background-transparent font-bold uppercase px-6 py-2 text-sm outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150"
-                type="button" (click)="toggleEditModal(0)">
-          Close
-        </button>
-        <button class="bg-emerald-500 text-white active:bg-emerald-600 font-bold uppercase text-sm px-6 py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150"
-                type="button" (click)="toggleEditModal(0)">
-          Save Changes
-        </button>
-      </div>
-    </div>
-  </div>
-</div>
-<div *ngIf="showModal" class="opacity-25 fixed inset-0 z-40 bg-black"></div> -->
-
-
-<!-- Edit modal -->
-
-<!-- </ng-container> -->
+  </nav> -->
