--- a/yield/src/app/data-table/data-table.component.css
+++ b/yield/src/app/data-table/data-table.component.css
@@ -55,9 +55,6 @@ td[colspan] {
   @apply pr-6 text-xs italic text-red-500 font-normal;
 }
 
-
-
-
 .table-trade-checkbox {
   @apply w-4 h-4 text-blue-600 bg-[#9DACC6] border-gray-300 rounded focus:ring-blue-500 focus:ring-2;
 }
@@ -66,64 +63,19 @@ td[colspan] {
   @apply px-6 py-1 font-semibold whitespace-nowrap;
 }
 
-.table-trade-edit-btn {
-  @apply font-medium text-blue-600 dark:text-blue-500 hover:underline visited:text-[#9DACC6];
+.action-btn-group {
+  @apply flex items-center justify-center gap-x-2;
+}
+
+.delete-btn {
+  @apply font-medium text-red-600 hover:opacity-80 visited:text-[#9DACC6];
+}
+
+.edit-btn {
+  @apply font-medium text-blue-600 hover:opacity-80 visited:text-[#9DACC6];
 }
 
 .col-padding {
   @apply px-6 py-3;
 }
 
-
-/* ========= MODAL STYLES ==============
-.modal-bg-back {
-  @apply opacity-25 fixed inset-0 z-0 bg-black;
-}
-
-.modal-wrapper {
-  @apply flex justify-center items-center fixed p-6 inset-0 z-50 outline-none focus:outline-none;
-}
-
-.modal-wrap-content {
-  @apply relative my-auto mx-auto p-6 w-3/6 max-w-3xl;
-}
-
-.modal-content {
-  @apply flex flex-col mx-auto p-6 border-0 rounded-sm shadow-lg bg-white outline-none focus:outline-none;
-}
-
-.modal-wrap-title {
-  @apply flex items-start py-6 border-b border-b-slate-700 border-[#FBF9F9];
-}
-
-.modal-input-wrap {
-  @apply flex flex-1 w-full justify-evenly gap-4;
-}
-
-.modal-input-wrap.last {
-  @apply pl-8 justify-start items-start;
-}
-
-.modal-wrap-btn {
-  @apply flex items-center justify-end p-6;
-}
-
-.btn-close, .btn-save {
-  @apply w-2/6 font-bold uppercase px-6 py-2 mr-1 mb-1 text-sm shadow-slate-700 hover:shadow-md outline-none focus:outline-none ease-linear transition-all duration-150;
-}
-
-.btn-save {
-  @apply bg-[#DEB465] text-white;
-}
-
-.btn-close {
-  @apply bg-red-500  text-white;
-} */
-
-/* .modal-btn {
-  @apply bg-[#DEB465] text-white font-bold uppercase text-sm px-6 py-3 mr-1 mb-1 rounded-sm shadow hover:shadow-lg outline-none focus:outline-none ease-linear transition-all duration-150;
-} */
-
-/* .edit-wrapper {
-  @apply flex flex-col flex-grow h-full items-end;
-} */
