--- a/yield/src/app/data-table/data-table.component.html
+++ b/yield/src/app/data-table/data-table.component.html
@@ -26,7 +26,7 @@
         <tr>
           <td class="p-4">
             <div class="">
-              <input id="checkbox-all" type="checkbox" class="">
+             <span class="px-1 mr-1 text-md">{{idx+1}}</span><input id="checkbox-all" type="checkbox" class="">
             </div>
           </td>
           <td>{{ record.date }}</td>
