--- a/yield/src/app/file-upload/file-upload.component.css
+++ b/yield/src/app/file-upload/file-upload.component.css
@@ -1,20 +1,13 @@
 
-.action-btn {
-  @apply px-4 py-2 mx-2 bg-slate-400 text-white rounded-sm shadow-sm uppercase w-36 hover:bg-slate-300 duration-150;
-}
 
-.action-input-group-center {
-  @apply flex w-full justify-center items-center px-4 ;
+.action-input-group {
+  @apply relative flex justify-end items-end px-6;
 }
 
 .action-input {
-  @apply ml-24 flex-1 text-sm text-gray-900 border border-gray-300 bg-white file:px-4 file:py-3 file:bg-slate-400 file:outline-none file:border-none file:text-white file:uppercase file:min-w-fit file:text-xs;
-}
-
-.action-input-btn {
-  @apply px-4 py-2 bg-[#DEB465] text-white;
+  @apply w-3/6 border border-slate-300 inset-0 bg-white file:p-6 file:bg-[#9DACC6] file:outline-none file:border-none file:text-white file:uppercase file:min-w-fit file:text-xs;
 }
 
 .file-type-error {
-  @apply mt-6 pr-6 text-xs italic text-red-500 font-normal;
+  @apply absolute bottom-[-2rem] right-[2rem] italic text-red-500 font-normal;
 }
