--- a/yield/src/app/app.component.css
+++ b/yield/src/app/app.component.css
@@ -10,34 +10,10 @@
   @apply flex items-center w-full py-8;
 }
 
-/* .action-btn {
-  @apply px-4 py-2 mx-2 bg-slate-400 text-white rounded-sm shadow-sm uppercase w-36 hover:bg-slate-300 duration-150;
-}
-
-.action-input-btn {
-  @apply px-4 py-2 bg-[#DEB465] text-white;
-}
-
-.action-input-group { 
-  @apply flex flex-1 justify-start px-4 ;
-}
-
-.action-input-group-center {
-  @apply flex flex-1 justify-center items-center px-4 ;
-} */
-
-/* .action-input {
-  @apply w-4/6 text-sm text-gray-900 border border-gray-300 bg-white file:px-4 file:py-3 file:bg-slate-400 file:outline-none file:border-none file:text-white file:uppercase file:min-w-fit file:text-xs;
-}
-
 .action-btn-group {
-  @apply flex flex-1 justify-end px-6;
-} */
-
-.action-btn-group {
-  @apply flex flex-1 w-full justify-start items-start;
+  @apply flex flex-1 gap-6 px-2 py-3 w-full justify-start items-start;
 }
 
 .action-btn {
-  @apply px-4 py-2 mx-2 bg-slate-400 text-white rounded-sm shadow-sm uppercase w-36 hover:bg-slate-300 duration-150;
+  @apply px-2 py-3 bg-[#9DACC6] text-white rounded-sm shadow-sm uppercase w-36 hover:bg-slate-300 duration-150;
 }
