--- a/yield/src/app/app.component.css
+++ b/yield/src/app/app.component.css
@@ -3,7 +3,7 @@
 }
 
 .app-footer {
-  @apply absolute bottom-2 text-center w-full;
+  @apply relative top-6 text-center w-full;
 }
 
 .action-container {
@@ -11,9 +11,9 @@
 }
 
 .action-btn-group {
-  @apply flex flex-1 gap-6 px-2 py-3 w-full justify-start items-start;
+  @apply flex flex-1 gap-6 px-6 py-3 w-full justify-start items-start;
 }
 
 .action-btn {
-  @apply px-2 py-3 bg-[#9DACC6] text-white rounded-sm shadow-sm uppercase w-36 hover:bg-slate-300 duration-150;
+  @apply mx-2 px-3 py-3 bg-[#9DACC6] text-white rounded-sm shadow-sm uppercase w-36 hover:bg-slate-300 duration-150;
 }
