--- a/yield/src/app/edit-modal/edit-modal.component.html
+++ b/yield/src/app/edit-modal/edit-modal.component.html
@@ -3,7 +3,7 @@
   <div class="modal-wrap-content">
 
     <form [formGroup]="editForm"
-          (ngSubmit)="updateTradeRecord()" 
+          (ngSubmit)="commitTradeRecordUpdate()" 
           class="modal-content">
 
       <div class="modal-wrap-title">
