--- a/yield/src/app/data-table/data-table.component.css
+++ b/yield/src/app/data-table/data-table.component.css
@@ -7,7 +7,7 @@ thead {
 }
 
 caption {
-  @apply text-2xl py-4;
+  @apply text-left text-2xl py-4;
 }
 
 tr {
@@ -41,10 +41,6 @@ tfoot > tr > td {
 
 tfoot > tr > td > button {
   @apply py-2 px-8 m-0 text-white text-xl uppercase bg-[#DEB465] rounded-sm;
-}
-
-td[colspan] {
-  @apply relative;
 }
 
 .option-error {
