--- a/yield/src/app/data-table/data-table.component.html
+++ b/yield/src/app/data-table/data-table.component.html
@@ -1,6 +1,9 @@
-<ng-container>
+<span>apiTradeRecords: {{apiTradeRecords.length}}</span><br />
+<span>tradeRecords: {{tradeRecords.length}} </span><br />
+
+<ng-container *ngIf="tradeRecords.length > 0">
   <!-- Section for table displaying trades -->
-  <table *ngIf="tradeRecords.length > 0">
+  <table>
     <caption >Trade results </caption>
     <thead >
       <tr>
@@ -13,15 +16,12 @@
         <th *ngFor="let column of headerRow;">
           {{ column.name }}
         </th>
-        <!-- <th>
-          Profit / Loss
-        </th> -->
         <th >
           Action
         </th>
       </tr>
     </thead>
-    <tbody >
+    <tbody>
       <ng-container *ngFor="let record of tradeRecords; index as idx">
         <tr>
           <td class="p-4">
@@ -38,98 +38,65 @@
           <td>{{ record.amountPaid }}</td>
           <td>{{ record.fee }}</td>
           <td>{{ record.currencyPair }}</td>
-
-          <!-- for profit and loss pipe -->
-          <!-- <td> {{ 0.00 }} </td> -->
           <td class="action-btn-group">
 
-            <a href="#" 
-              type="button"     
-              (click)="editTrade(idx, record)" 
+            <a href="#" type="button"     
+              (click)="showEditTradeRecordModal(idx, record)" 
               class="edit-btn">
-            <svg xmlns="http://www.w3.org/2000/svg" 
-              fill="blue"
-              height="1em" 
-              viewBox="0 0 512 512">
+            <svg xmlns="http://www.w3.org/2000/svg"  fill="blue" height="1em" viewBox="0 0 512 512">
               <path d="M441 58.9L453.1 71c9.4 9.4 9.4 24.6 0 33.9L424 134.1 377.9 88 407 58.9c9.4-9.4 24.6-9.4 33.9 0zM209.8 256.2L344 121.9 390.1 168 255.8 302.2c-2.9 2.9-6.5 5-10.4 6.1l-58.5 16.7 16.7-58.5c1.1-3.9 3.2-7.5 6.1-10.4zM373.1 25L175.8 222.2c-8.7 8.7-15 19.4-18.3 31.1l-28.6 100c-2.4 8.4-.1 17.4 6.1 23.6s15.2 8.5 23.6 6.1l100-28.6c11.8-3.4 22.5-9.7 31.1-18.3L487 138.9c28.1-28.1 28.1-73.7 0-101.8L474.9 25C446.8-3.1 401.2-3.1 373.1 25zM88 64C39.4 64 0 103.4 0 152V424c0 48.6 39.4 88 88 88H360c48.6 0 88-39.4 88-88V312c0-13.3-10.7-24-24-24s-24 10.7-24 24V424c0 22.1-17.9 40-40 40H88c-22.1 0-40-17.9-40-40V152c0-22.1 17.9-40 40-40H200c13.3 0 24-10.7 24-24s-10.7-24-24-24H88z"/></svg>
             </a>
             
-            <a href="#" 
-              type="button"
-              (click)="deleteTrade(idx, record)" 
+            <a href="#" type="button"
+              (click)="commitTradeDelete(idx, record)" 
               class="delete-btn">
-            <svg xmlns="http://www.w3.org/2000/svg"
-              fill="red"
-              height="1em" 
-              viewBox="0 0 448 512">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="red" height="1em" viewBox="0 0 448 512">
               <path d="M170.5 51.6L151.5 80h145l-19-28.4c-1.5-2.2-4-3.6-6.7-3.6H177.1c-2.7 0-5.2 1.3-6.7 3.6zm147-26.6L354.2 80H368h48 8c13.3 0 24 10.7 24 24s-10.7 24-24 24h-8V432c0 44.2-35.8 80-80 80H112c-44.2 0-80-35.8-80-80V128H24c-13.3 0-24-10.7-24-24S10.7 80 24 80h8H80 93.8l36.7-55.1C140.9 9.4 158.4 0 177.1 0h93.7c18.7 0 36.2 9.4 46.6 24.9zM80 128V432c0 17.7 14.3 32 32 32H336c17.7 0 32-14.3 32-32V128H80zm80 64V400c0 8.8-7.2 16-16 16s-16-7.2-16-16V192c0-8.8 7.2-16 16-16s16 7.2 16 16zm80 0V400c0 8.8-7.2 16-16 16s-16-7.2-16-16V192c0-8.8 7.2-16 16-16s16 7.2 16 16zm80 0V400c0 8.8-7.2 16-16 16s-16-7.2-16-16V192c0-8.8 7.2-16 16-16s16 7.2 16 16z"/></svg>          </a>
-          
+
           </td>
         </tr>
       </ng-container>
     </tbody>
-    <tfoot >
+    <!-- <tfoot >
       <tr>
         <td colspan="11">
-          <span id=i class="column-error" >
+          <span id=i class="column-error" > -->
             <!-- Column identifiers must be selected before submitting! -->
-          </span>
-          <button type="button">Submit</button>
+          <!-- </span>
+          <button (click)="saveTradeRecords()" type="button">Save Trades</button>
         </td>
       </tr>
-    </tfoot>
+    </tfoot> -->
   </table>
 </ng-container>
 
-<!-- FOR PAGINATION -->
-  <!-- <nav class="table-trade-footer" >
-    <span class="table-footer-text">Showing 1-3 of 100</span>
-    <ul class="inline-flex items-center -space-x-px">
-      <li>
-        <a href="#" class="block px-3 py-2 ml-0 leading-tight text-[#9DACC6] bg-white border border-gray-300 rounded-l-lg hover:bg-gray-100 hover:text-gray-700">
-          <span class="sr-only">Previous</span>
-          <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"  xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd"
-                  d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z"
-                  clip-rule="evenodd"></path>
-          </svg>
-        </a>
-      </li>
+<ng-container *ngIf="apiTradeRecords.length > 0">
+  <table>
+    <caption >Trade Records: <br /> Report Id: {{apiTradeRecords[0].reportId}} <br /> Report Date: {{apiTradeRecords[0].reportDate}} </caption>
+    <thead >
+      <tr>
+        <th *ngFor="let column of apiHeaderFields;" scope="col" >
+          {{ column.name }}
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      <ng-container *ngFor="let record of apiTradeRecords; index as idx">
+        <tr>
+          <td>{{ record.id }}</td>
+          <td>{{ record.assetName }}</td>
+          <td>{{ record.currencyPair }}</td>
+          <td>{{ record.side }}</td>
+          <td>{{ record.amount }}</td>
+          <td>{{ record.fee }}</td>
+          <td>{{ record.qty }}</td>
+        </tr>
+      </ng-container>
+    </tbody>
+  </table>
 
-      <li>
-        <a href="#"
-           class="px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 ">1</a>
-      </li>
-      <li>
-        <a href="#"
-           class="px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 ">2</a>
-      </li>
-      <li>
-        <a href="#"
-           class="px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 ">3</a>
-      </li>
-      <li>
-        <a href="#"
-           class="px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 ">...</a>
-      </li>
-      <li>
-        <a href="#"
-           class="px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 ">100</a>
-      </li>
-      <li>
-        <a href="#"
-           class="block px-3 py-2 leading-tight text-gray-500 bg-white border border-gray-300 rounded-r-lg hover:bg-gray-100 hover:text-gray-700">
-          <span class="sr-only">Next</span>
-          <svg class="w-5 h-5" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
-               xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd"
-                  d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
-                  clip-rule="evenodd"></path>
-          </svg>
-        </a>
-      </li>
-    </ul>
-  </nav> -->
+</ng-container>
+
 
 <app-edit-modal 
   [(tradeRecord)]="tradeRecord" 
