--- a/yield/src/app/edit-modal/edit-modal.component.html
+++ b/yield/src/app/edit-modal/edit-modal.component.html
@@ -1,5 +1,5 @@
 
-<aside class="modal-wrapper">
+<div class="modal-wrapper">
   <div class="modal-wrap-content">
 
     <form [formGroup]="editForm"
@@ -95,5 +95,5 @@
 
     </form>
   </div>
-</aside>
+</div>
 <div class="modal-bg-back"></div>
