--- a/yield/src/app/edit-modal/edit-modal.component.html
+++ b/yield/src/app/edit-modal/edit-modal.component.html
@@ -17,7 +17,7 @@
           <app-input 
             type="text"
             label="asset" 
-            placeholder="{{tradeRecord.asset}}"
+            placeholder="{{tradeRecord.assetName}}"
             [control]="asset"
             >
         </app-input>
@@ -62,7 +62,7 @@
         <div class="modal-input-wrap">
           <app-input 
             label="amount_paid" 
-            placeholder="{{tradeRecord.amountPaid}}"
+            placeholder="{{tradeRecord.amount}}"
             [control]="amountPaid"
             >
         </app-input>
