--- a/yield/src/app/app.component.html
+++ b/yield/src/app/app.component.html
@@ -2,75 +2,69 @@
 <section class="app-wrapper">
 
   <!-- Nav / Top Bar -->
-  <app-top-bar 
+  <!-- <app-top-bar 
       [(loggedInUser)]="loggedInUser"
-      class="z-50"></app-top-bar>
-
-  <!-- FOR DEBUGGING -->
-  <!-- <span>showTable: {{showTable}}</span>
-  <br /><span>showSelect: {{showSelectTable}}</span>
-  <br /><span>didUploadFile: {{didUploadFile}}</span> -->
-
-  <!-- Action bar for performing actions, e.g. upload file, submit trades i.e save, clearing table, fetching historical -->
-  <caption class="block text-2xl pt-8">Upload a trade file to enable view options</caption>
-  <div class="action-container">
-    
-    <app-file-upload 
-      [(didUploadFile)]="showSelectTable"
-      class="mx-auto w-3/6">
-    </app-file-upload>
+      class="z-50"></app-top-bar> -->
   
-
-    <!-- action buttons -->
-    <div class="action-btn-group" >
-      <div class="flex flex-col gap-4">
-        <button class="action-btn" (click)="toggleFrequencyCard()">frequency</button>
-        <button class="action-btn" (click)="toggleMarketCard()">market</button>
-        <button class="action-btn" (click)="toggleProfitLossCard()">profit & loss</button>
-        <button class="action-btn" (click)="toggleTradeCard()">trade</button>
-      </div>
-      <div class="flex flex-col gap-4">
-        <button class="action-btn" (click)="toggleLineChart()">line chart</button>
-        <button class="action-btn" (click)="toggleBarChart()">bar chart</button>
-      </div>
-      <div class="flex flex-col gap-4">
-          <!-- disable buttons when user is not logged in -->
-          <button class="action-btn api-btn" 
-              [disabled]="!loggedInUser" 
-              [ngClass]="!loggedInUser ? 'opacity-30' : 'opacity-100' "
-              (click)="saveTrades()">save trades</button>
+  <div class="flex w-full h-[4.5rem] items-center justify-center">
+    <h1 class="text-center">header context</h1>
+  </div>
   
-          <button class="action-btn api-btn" 
-              [disabled]="!loggedInUser" 
-              [ngClass]="!loggedInUser ? 'opacity-30' : 'opacity-100' "(click)="getTradeRecords()">fetch trades</button>
-        <button class="action-btn api-btn" (click)="fetchApiProfitLossRecords()">Fetch PL</button>
+  <hr class="w-full mb-3" />
+
+  <!--  -->
+  <aside class="aside-wrap">
+
+    <div class="menu-wrap">
+
+      <!-- menu top  -->
+      <div>
+        <hr />
+        <h3 class="menu-title">markets</h3>
+        <hr />
+        <ul>
+          <li><a>view</a></li>
+          <li><a>research</a></li>
+          <li><a>detail</a></li>
+        </ul>
+        <hr />
+        <h3 class="menu-title">trade</h3>
+        <hr />
+        <ul>
+          <li><a>view</a></li>
+          <li><a>analysis</a></li>
+          <li><a>record</a></li>
+        </ul>
+        <hr />
+        <h3 class="menu-title">portfolio</h3>
+        <hr />
+        <ul>
+          <li><a>view</a></li>
+          <li><a>analysis</a></li>
+          <li><a>entries</a></li>
+        </ul>
+
+      </div>
+
+      <!-- menu footer -->
+      <div class="menu-section-bottom">
+        <hr />
+        <h3 class="menu-title">profile</h3>
+        <hr />
+        <ul>
+          <li><a>setting</a></li>
+          <li><a>login / logout</a></li>
+        </ul>
+
       </div>
     </div>
-  </div>
+    
+    <div class="flex-[5] ">
+      <app-markets></app-markets>
+      <router-outlet></router-outlet>
+    </div>
+  </aside>
 
-  <!-- Section for info / summary data -->
-  <app-market-result 
-    [showMarketCard]="showMarketCard"
-    [showProfitLossCard]="showProfitLossCard"
-    [showFrequencyCard]="showFrequencyCard"
-    [showTradeCard]="showTradeCard" 
-    class=""></app-market-result>
-
-  <!-- Section for charts -->
-  <app-analytic 
-    [showLineChart]="showLineChart"
-    [showBarChart]="showBarChart" class=""></app-analytic>
-
-  <!-- Section for selecting column headers -->
-  <app-data-select-table
-    *ngIf="showSelectTable"
-    [(showTable)]="showTable"
-    [(showSelectTable)]="showSelectTable"></app-data-select-table>
-
-    <!-- *ngIf="didUploadFile || (showTable && showSelectTable)" -->
-  <!-- Section for uploading / show after file is uploaded -->
-  <app-data-table 
-    *ngIf="showTable && !showSelectTable"></app-data-table>
 
 </section> 
 
