--- a/yield/src/app/data-table/data-table.component.html
+++ b/yield/src/app/data-table/data-table.component.html
@@ -1,7 +1,7 @@
 <!-- FOR DEBUGGING -->
-<span>apiTradeRecords: {{apiTradeRecords.length}}</span><br />
+<!-- <span>apiTradeRecords: {{apiTradeRecords.length}}</span><br />
 <span>tradeRecords: {{tradeRecords.length}} </span><br />
-<span>profit loss: {{apiProfitLossRecords.length}} </span><br />
+<span>profit loss: {{apiProfitLossRecords.length}} </span><br /> -->
 
 <ng-container *ngIf="tradeRecords.length > 0">
   <!-- Section for table displaying trades -->
