--- a/yield/src/app/app.component.html
+++ b/yield/src/app/app.component.html
@@ -7,7 +7,7 @@
       class="z-50"></app-top-bar> -->
   
   <div class="flex w-full h-[4.5rem] items-center justify-center">
-    <h1 class="text-center">header context</h1>
+    <h1 class="capitalize text-3xl text-center pl-24">yield app</h1>
   </div>
   
   <hr class="w-full mb-3" />
@@ -59,7 +59,7 @@
       </div>
     </div>
     
-    <div class="flex-[5] ">
+    <div class="flex-[5] overflow-y-auto">
       <!-- <app-markets></app-markets> -->
       <router-outlet></router-outlet>
     </div>
@@ -69,5 +69,5 @@
 </section> 
 
 <footer class="app-footer">
-  <span class="">Yield | @Copyright 2023</span>
+  <span >Yield | @Copyright 2023</span>
 </footer>
